[package]
name = "bevy-behaviour-tree"
version = "0.1.0"
edition = "2021"
description = "System-based behaviour trees for bevy."
repository = "https://github.com/Mampfinator/bevy-behaviour-tree"
rust-version = "1.71.0"

[workspace]
members = [
    "crates/*"
]

[dependencies]
bevy-behaviour-tree-core = { path = "crates/bevy-behaviour-tree-core" }
bevy-behaviour-tree-macros = { path = "crates/bevy-behaviour-tree-macros" }

[dev-dependencies]
bevy = "0.11.3"
rand = "0.8.5"

[[example]]
name = "moving_points"
path = "examples/moving_points.rs"